--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -238,7 +238,7 @@
   <string name="vakit_indicator_current">Şu anki Vakit</string>
   <string name="night_mode">Gece Modu kullan</string>
   <string name="show_notification_screen">Bildiri ekranı göster</string>
-  <string name="autoremove_notification">Remove Notification after Adhan</string>
+  <string name="autoremove_notification">Ezan\'dan sonra bildirimi sil</string>
   <string name="about">Hakkında</string>
   <string name="support_development">Geliştirmeyi destekle</string>
   <string name="report_bug">Hata bildir</string>
